<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/google_mountain_two"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.evstarts.androidquizz.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Android Quizz"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:paddingTop="8dp"
        android:textStyle="bold"

        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/QuestionTitle"
                    android:text="@string/question1" />

                <RadioGroup
                    android:id="@+id/rgQuestion1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rbRadioQ11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q1Resposta1" />

                    <RadioButton
                        android:id="@+id/rbRadioQ12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q1Resposta2" />

                    <RadioButton
                        android:id="@+id/rbRadioQ13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q1Resposta3" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="@android:color/darker_gray"/>

                <!-- Questão dois -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/QuestionTitle"
                    android:text="@string/question2" />

                <RadioGroup
                    android:id="@+id/rgQuestion2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rbRadioQ21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q2Resposta1" />

                    <RadioButton
                        android:id="@+id/rbRadioQ22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q2Resposta2" />

                    <RadioButton
                        android:id="@+id/rbRadioQ23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q2Resposta3" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/QuestionTitle"
                    android:text="@string/question3" />

                <EditText
                    android:id="@+id/etQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q3dica"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/QuestionTitleWithDica"
                    android:text="@string/question6" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="9dp"
                    android:text="@string/q6dica" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="281dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/jetbrains" />

                <EditText
                    android:id="@+id/etQ4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q4dica"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/QuestionTitle"
                    android:text="@string/question4" />


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4Resposta1" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4Resposta2" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4Resposta3" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/enviar"
                    android:textColor="@android:color/white"
                    android:background="@drawable/send_button"
                    android:padding="6dp"
                    android:layout_margin="6dp"
                    android:textAllCaps="true"/>

            </LinearLayout>


        </ScrollView>


    </android.support.v7.widget.CardView>

</RelativeLayout>

